--- a/server/package.json
+++ b/server/package.json
@@ -1,6 +1,7 @@
 {
   "name": "server",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -9,7 +10,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.1.4",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "nodemon": "^2.0.20",
@@ -18,7 +19,5 @@
     "pg": "^8.9.0"
   },
   "author": "",
-  "license": "ISC",
-  "keywords": [],
-  "description": ""
+  "license": "ISC"
 }
